# EPnP

cpp/: CMakeLists.txt  epnp.cpp  epnp.h  main.cpp  reference_2d3d_points.csv
